syntax = "proto3";

package puppeteer;

option go_package = "pkg/contract";

service PuppetService {
  rpc GetCommands(GetCommandRequest) returns (stream Command) {}
  rpc SendResult(SendResultRequest) returns (SendResultResponse) {}
  rpc GetFile(GetFileRequest) returns (stream File) {}
  rpc Heartbeat(PingRequest) returns (stream PingResponse) {}
}

message GetCommandRequest {
  string puppetName = 1;
}

message Command {
  string command = 1;
  string commandId = 2;
}

message SendResultRequest {
  string commandId = 1;
  string result = 2;
}

message GetFileRequest{
  string puppetName = 1;
}

message File {
  string fileName = 1;
  string contents = 2;
}

message SendResultResponse {}

message PingRequest {
  string puppetName = 1;
}

message PingResponse {}

  
  